--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="profile_logout_btn_label">Logout</string>
     <string name="profile_your_email_subtitle">Your email</string>
     <string name="profile_add_payment_method_title">Add payment method</string>
+    <string name="profile_write_to_support_title">Write to support</string>
 
     <!-- Cart screen -->
     <string name="cart_total_items">Total items: %d</string>
@@ -49,6 +50,9 @@
     <string name="edit_product_quantity">Quantity</string>
     <string name="edit_product_done_btn_label">Done</string>
     <string name="edit_product_new_product_title">Create new product</string>
+    <string name="edit_product_photo_dialog_title">How to get photo?</string>
+    <string name="edit_product_run_camera_text">Open camera</string>
+    <string name="edit_product_gallery_text">From gallery</string>
 
     <!-- Detail product screen -->
     <string name="detail_product_price_subtitle">Price %.2f r.</string>
